syntax = "proto3";
import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.shellshellfish.aaas.finance.trade.pay";
option java_outer_classname = "payRpcService";
option objc_class_prefix = "PRS";

service PayRpcService {
    rpc BindBankCard (BindBankCardQuery) returns (BindBankCardResult) {
    }
}
//绑定银行卡
message BindBankCardQuery{
  int64 userId = 1;//用户ID
  string userPid = 2;//用户身份证号
  string bankCardNum = 3;//用户银行卡号
  string cellphone = 4;//用户手机号
  string userName = 5;//用户名称
  string bankCode = 6;//银行在交易系统的编码
  string tradeBrokerName = 7;//交易系统名称
  int64 tradeBrokerId = 8;//交易系统Id
}

//绑定银行卡的结果
message BindBankCardResult{
  string tradeacco = 1;//交易账户号
}